Using the configuration file now to set the encoding for the DB [to utf-8]
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -60,6 +60,7 @@ resources.db.params.username = "webuser"
 resources.db.params.password = "XXXXXXX"
 resources.db.params.dbname = "medialab"
 resources.db.isDefaultTableAdapter = true
+resources.db.params.charset = utf8
 
 email.smtp = "smtp.gmail.com"
 email.params.username = "no-reply@plifk.com"
