using the session to store/retrieve the global hash with fallback to memcached if it's not found.
Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,6 +11,8 @@ robotEmail.addr = "no-reply@plifk.com"
 robotEmail.name = "Plifk"
 api.version = "0.1a"
 
+cache.backend.memcache.servers.global.compression = 1
+
 signup.inviteonly = 1
 
 upload.available = 1
