Add support for Redis.
Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -13,6 +13,8 @@ api.version = "0.1a"
 
 cache.backend.memcache.servers.global.compression = 1
 
+cache.backend.redis.servers.global.password = "gqwgq"
+
 signup.inviteonly = 1
 
 upload.available = 1
