Session system now with memcache and recent activity info improved
Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local> + dsn for CouchDB
Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -66,6 +66,8 @@ resources.db.params.dbname = "medialab"
 resources.db.isDefaultTableAdapter = true
 resources.db.params.charset = utf8
 
+resources.db.couchdb.dsn = "http://localhost:5984/"
+
 email.smtp = "smtp.gmail.com"
 email.params.username = "no-reply@plifk.com"
 email.params.password = "c(efwfer0-fei4-h5"
@@ -76,6 +78,8 @@ email.params.port = 587
 +layout.contentType = "text/html; charset=utf-8"
 
 resources.session.use_only_cookies = true
++cookie remembered for two weeks
+resources.session.cookie_lifetime = "1209600"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 +resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.defaultModule = "default"
