updates application.ini and add data that should be there before
Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,7 +6,11 @@ description = "Plifk. The data sharing company. A new experience in sharing your
 webhost = "dev.plifk.com"
 webhostssl = "dev.plifk.com"
 ssl = 1
++ web/api root must be like /path, not /path or path/
+webroot = ""
+web_addr.force_lower_case = 1
 apihost = "api.plifk.com"
+apiroot = ""
 robotEmail.addr = "no-reply@plifk.com"
 robotEmail.name = "Plifk"
 api.version = "0.1a"
@@ -15,7 +19,7 @@ cache.backend.memcache.servers.global.compression = 1
 
 cache.backend.redis.servers.global.password = "gqwgq"
 
-signup.inviteonly = 1
+signup.inviteonly = 0
 
 upload.available = 1
 upload.errorMsg = "If this field is empty, shows the default message."
@@ -28,6 +32,9 @@ share.maxFileSize = 256
 share.sizeUnit = "MiB"
 share.perPage = 10
 share.commentsPerPage = 10
+
++orders settings
+orders.perPage = 2
 
 URLshortening.addr = "http://plifk.li/"
 +the one above may be changed when necessary: lots of shares
@@ -58,6 +65,8 @@ phpSettings.display_errors = 0
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
+resources.db.couchdb.dsn = "http://username:password@host:5984/"
+
 resources.db.adapter = "pdo_mysql"
 resources.db.params.host = "localhost"
 resources.db.params.username = "webuser"
@@ -70,7 +79,7 @@ resources.db.couchdb.dsn = "http://localhost:5984/"
 
 email.smtp = "smtp.gmail.com"
 email.params.username = "no-reply@plifk.com"
-email.params.password = "c(efwfer0-fei4-h5"
+email.params.password = "password"
 email.params.auth = "no-reply@plifk.com"
 email.params.ssl = "tls"
 email.params.port = 587
