set view doctype as param in the config file and remove old lines referring to doctype XHTML1_STRICT by mistake which were just overhead to the system
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -94,6 +94,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.defaultModule = "default"
 resources.modules[] =
 resources.view.encoding = "UTF-8"
+resources.view.doctype = "XHTML5"
 resources.view.basePath = APPLICATION_PATH "/views/scripts"
 resources.layout.layout = "layout"
 resources.layout.layoutPath = APPLICATION_PATH "/layout/scripts"
