mail resource configuration in the application.ini updated
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -77,12 +77,19 @@ resources.db.params.charset = utf8
 
 resources.db.couchdb.dsn = "http://localhost:5984/"
 
-email.smtp = "smtp.gmail.com"
-email.params.username = "no-reply@plifk.com"
-email.params.password = "password"
-email.params.auth = "no-reply@plifk.com"
-email.params.ssl = "tls"
-email.params.port = 587
+resources.mail.transport.type = smtp
+resources.mail.transport.host = "smtp.gmail.com"
+resources.mail.transport.auth = "no-reply@plifk.com"
+resources.mail.transport.username = "no-reply@plifk.com"
+resources.mail.transport.password = "password"
+resources.mail.transport.ssl = "tls"
+resources.mail.transport.port = 587
+ 
++resources.mail.defaultFrom.email = john@example.com
++resources.mail.defaultFrom.name = "John Doe"
++resources.mail.defaultReplyTo.email = Jane@example.com
++resources.mail.defaultReplyTo.name = "Jane Doe"
+
 
 +layout.contentType = "text/html; charset=utf-8"
 
@@ -115,13 +122,6 @@ phpSettings.display_errors = 1
 resources.db.params.host = ""
 resources.db.params.username = ""
 resources.db.params.password = ""
-
-email.smtp = "localhost"
-+email.params.username = "no-reply@plifk.com"
-+email.params.password = ""
-+email.params.auth = "no-reply@plifk.com"
-+email.params.ssl = "tls"
-+email.params.port = 587
 
 share.monthlyLimit = 100
 share.maxFileSize = 20
