--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,6 +5,7 @@ keywords = "share, file, upload"
 description = "Plifk. The data sharing company. A new experience in sharing your files with your friends, family and co–workers."
 webhost = "dev.plifk.com"
 webhostssl = "dev.plifk.com"
+cdn = "http://static.plifk.com/"
 ssl = 1
 + web/api root must be like /path, not /path or path/
 webroot = ""
@@ -48,8 +49,6 @@ services.S3.key = ""
 services.S3.secret = ""
 services.S3.sharesBucket = "storage.plifk.com"
 services.S3.sharesBucketAddress = "http://storage.plifk.com/"
-services.S3.designBucket = "static.plifk.com"
-services.S3.designBucketAddress = "http://static.plifk.com/"
 services.S3.headshotsBucket = "uimg.plifk.com"
 services.S3.headshotsBucketAddress = "http://uimg.plifk.com/"
 
