session prefix / namespace now can be set at the configuration level
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -93,6 +93,11 @@ resources.mail.transport.port = 587
 +layout.contentType = "text/html; charset=utf-8"
 
 resources.session.use_only_cookies = true
++it is important for security that each application has a different location (prefix, namespace)
++to store its cookies, last activities
++and that it be not accessible by anything else such as last activity data, etcs
+session.prefix = "plis_"
+lastActivity.prefix = "plia_"
 +cookie remembered for two weeks
 resources.session.cookie_lifetime = "1209600"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
