Ml_Model_Log renamed to Ml_Model_Logger, minor changes were made and now it uses the Ml_Model_CouchDb rather than the Zend_Db
The action method was modified intensely and now is named log

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -15,6 +15,7 @@ apiroot = ""
 api.version = "0.1a"
 robotEmail.addr = "no-reply@plifk.com"
 robotEmail.name = "Plifk"
+log.requests = 1
 
 cache.backend.memcache.servers.global.compression = 1
 
