change static can to something that doesn't exists so it won't load some stuff because of copyright rules
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,7 +5,7 @@ keywords = "share, file, upload"
 description = "Plifk. The data sharing company. A new experience in sharing your files with your friends, family and co–workers."
 webhost = "dev.plifk.com"
 webhostssl = "dev.plifk.com"
-cdn = "http://static.plifk.com/"
+cdn = "http://your.static.data.address/"
 ssl = 1
 + web/api root must be like /path, not /path or path/
 webroot = ""
