improves the pagination system
makes it route-aware and also remove not needed environment set option

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/defaultRoutes.ini
+++ b/application/configs/defaultRoutes.ini
@@ -53,6 +53,7 @@ routes.sharepage_1stpage.reverse = %s/%d
 routes.sharepage_1stpage.defaults.controller = filepage
 routes.sharepage_1stpage.defaults.action = filepage
 routes.sharepage_1stpage.defaults.page = 1
+routes.sharepage_1stpage.defaults.paginator_section_cont = comments
 routes.sharepage_1stpage.map.username = 1
 routes.sharepage_1stpage.map.share_id = 2
 routes.sharepage.map.share_id = 2
@@ -62,6 +63,7 @@ routes.sharepage.route = "(\w+)/(\d+)/page(\d+)"
 routes.sharepage.reverse = %s/%d/page%d
 routes.sharepage.defaults.controller = "filepage"
 routes.sharepage.defaults.action = "filepage"
+routes.sharepage.defaults.paginator_section_cont = comments
 routes.sharepage.map.username = 1
 routes.sharepage.map.share_id = 2
 routes.sharepage.map.page = 3
