fix issue of incorrect mail transport auth type
where the user's account was in place when the auth adapter should be and made the system fail with a security check of Zend_Loader regarding the name of the [not] adapter

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -79,7 +79,7 @@ resources.db.couchdb.dsn = "http://localhost:5984/"
 
 resources.mail.transport.type = smtp
 resources.mail.transport.host = "smtp.gmail.com"
-resources.mail.transport.auth = "no-reply@plifk.com"
+resources.mail.transport.auth = "login"
 resources.mail.transport.username = "no-reply@plifk.com"
 resources.mail.transport.password = "password"
 resources.mail.transport.ssl = "tls"
