--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: php
 php:
     - 5.3
+env: APPLICATION_ENV=testing
+env: DEFAULT_TIMEZONE=GMT
 script: phpunit --configuration tests/phpunit.xml
