fix broken .ini
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -94,7 +94,7 @@ resources.mail.transport.port = 587
 +layout.contentType = "text/html; charset=utf-8"
 
 resources.session.use_only_cookies = true
-+it is important for security that each application has a different location (prefix, namespace)
++it is important for security that each application has a different location: prefix, namespace
 +to store its cookies, last activities
 +and that it be not accessible by anything else such as last activity data, etcs
 session.prefix = "plis_"
