--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: php
 php:
     - 5.3
-env: APPLICATION_ENV=testing
-env: DEFAULT_TIMEZONE=GMT
+before_script: bin/install
 script: phpunit --configuration tests/phpunit.xml
