--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: php
 php:
     - 5.3
-before_script: bin/install
+before_script: ./bin/install
 script: phpunit --configuration tests/phpunit.xml
