--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 # based on https://github.com/github/gitignore
+build/api
+build/code-browser
+build/coverage
+build/logs
+build/pdepend
+cache.properties
 .settings
 .project
 .buildpath
