--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="MediaLab" default="build">
  <target name="build"
-   depends="prepare,install,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpdoc,phpunit,phpcb"/>
+   depends="prepare,install,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpunit,phpcb"/>
 
  <target name="build-parallel"
    depends="prepare,install,lint,tools-parallel,phpunit,phpcb"/>
@@ -17,7 +17,6 @@
    <antcall target="phpcpd"/>
    <antcall target="phpcs-ci"/>
    <antcall target="phploc"/>
-   <antcall target="phpdoc"/>
   </parallel>
  </target>
 
