remove vendor directories every time of a new build
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,8 @@
   <delete dir="${basedir}/build/coverage"/>
   <delete dir="${basedir}/build/logs"/>
   <delete dir="${basedir}/build/pdepend"/>
+  <delete dir="${basedir}/vendor/**/"/>
+  <delete dir="${basedir}/static/vendor/**/"/>
  </target>
 
  <target name="prepare" depends="clean"
