--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="MediaLab" default="build">
  <target name="build"
-   depends="prepare,install,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpunit,phpcb"/>
+   depends="prepare,install,lint,phploc,pdepend,phpmd-ci,phpcs-ci,phpcpd,phpdox,phpunit,phpcb"/>
 
  <target name="build-parallel"
    depends="prepare,install,lint,tools-parallel,phpunit,phpcb"/>
@@ -17,6 +17,7 @@
    <antcall target="phpcpd"/>
    <antcall target="phpcs-ci"/>
    <antcall target="phploc"/>
+   <antcall target="phpdox"/>
   </parallel>
  </target>
 
@@ -138,6 +139,11 @@
    <arg path="${basedir}/build,${basedir}/vendor" />
    <arg path="${basedir}" />
   </exec>
+ </target>
+ 
+ <target name="phpdox"
+         description="Generate API documentation using phpDox">
+  <exec executable="phpdox"/>
  </target>
 
  <target name="phpunit" description="Run unit tests with PHPUnit">
