make the build doc work nicely with phpUnderControl
with a HTML file which only redirects to the proper doc (generated by phpdox) path

Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # based on https://github.com/github/gitignore
-build/api
+build/api/xml
+build/api/docs
 build/code-browser
 build/coverage
 build/logs
