--- a/build.xml
+++ b/build.xml
@@ -22,7 +22,8 @@
  </target>
 
  <target name="clean" description="Cleanup build artifacts">
-  <delete dir="${basedir}/build/api"/>
+  <delete dir="${basedir}/build/api/docs"/>
+  <delete dir="${basedir}/build/api/xml"/>
   <delete dir="${basedir}/build/code-browser"/>
   <delete dir="${basedir}/build/coverage"/>
   <delete dir="${basedir}/build/logs"/>
@@ -35,7 +36,8 @@
 
  <target name="prepare" depends="clean"
          description="Prepare for build">
-  <mkdir dir="${basedir}/build/api"/>
+  <mkdir dir="${basedir}/build/api/docs"/>
+  <mkdir dir="${basedir}/build/api/xml"/>
   <mkdir dir="${basedir}/build/code-browser"/>
   <mkdir dir="${basedir}/build/coverage"/>
   <mkdir dir="${basedir}/build/logs"/>
