fix view base path
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -107,7 +107,7 @@ resources.frontController.defaultModule = "default"
 resources.modules[] =
 resources.view.encoding = "UTF-8"
 resources.view.doctype = "XHTML5"
-resources.view.basePath = APPLICATION_PATH "/views/scripts"
+resources.view.basePath = APPLICATION_PATH "/views"
 resources.layout.layout = "layout"
 resources.layout.layoutPath = APPLICATION_PATH "/layout/scripts"
 pluginpaths.Resource = APPLICATION_PATH "/resources"
