remove incomplete payment system links and its routes
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/configs/defaultRoutes.ini
+++ b/application/configs/defaultRoutes.ini
@@ -371,28 +371,28 @@ routes.proxyapi.defaults.action = api
 +routes.upgrade.defaults.action = account
 
 + /account/order
-routes.do_order.route = account/order
-routes.do_order.defaults.controller = credits
-routes.do_order.defaults.action = credits
++routes.do_order.route = account/order
++routes.do_order.defaults.controller = credits
++routes.do_order.defaults.action = credits
 
 + /account/order/<pid>
-routes.order.type = "Zend_Controller_Router_Route_Regex"
-routes.order.route = "account/order/(\w+)"
-routes.order.reverse = account/order/%s
-routes.order.defaults.controller = credits
-routes.order.defaults.action = order
-routes.order.map.order_pid = 1
++routes.order.type = "Zend_Controller_Router_Route_Regex"
++routes.order.route = "account/order/(\w+)"
++routes.order.reverse = account/order/%s
++routes.order.defaults.controller = credits
++routes.order.defaults.action = order
++routes.order.map.order_pid = 1
 
 + /account/order/history/<page<x>>
-routes.orders_1stpage.type = "Zend_Controller_Router_Route_Regex"
-routes.orders_1stpage.route = account/order/history
-routes.orders_1stpage.reverse = account/order/history
-routes.orders_1stpage.defaults.controller = "credits"
-routes.orders_1stpage.defaults.action = "orders"
-routes.orders_1stpage.defaults.page = 1
-routes.orders.type = "Zend_Controller_Router_Route_Regex"
-routes.orders.route = "account/order/history/page(\d+)"
-routes.orders.reverse = account/order/history/page%d
-routes.orders.defaults.controller = "credits"
-routes.orders.defaults.action = "orders"
-routes.orders.map.page = 1
++routes.orders_1stpage.type = "Zend_Controller_Router_Route_Regex"
++routes.orders_1stpage.route = account/order/history
++routes.orders_1stpage.reverse = account/order/history
++routes.orders_1stpage.defaults.controller = "credits"
++routes.orders_1stpage.defaults.action = "orders"
++routes.orders_1stpage.defaults.page = 1
++routes.orders.type = "Zend_Controller_Router_Route_Regex"
++routes.orders.route = "account/order/history/page(\d+)"
++routes.orders.reverse = account/order/history/page%d
++routes.orders.defaults.controller = "credits"
++routes.orders.defaults.action = "orders"
++routes.orders.map.page = 1
